# tcec-notifier

./: Cargo.toml  README.md  config.json5
src/: config.rs  discord.rs  main.rs  notify.rs  state.rs  tcec.rs  tcec_pgn.rs
